re PR libstdc++/10689 (pow(std::complex(0),1/3) returns (nan, nan) instead of 0.)

PR libstdc++/10689
	* include/std/std_complex.h (pow): Tidy

From-SVN: r66989